--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yiche/json-to-arr-str",
+    "name": "missing-u/json-to-arr-str",
     "description": "Laravel",
     "authors": [
         {
